Add missing JsonTransformer tests